Added a necessary open for the checkFormat task, by way of an environment variable.